# eyes

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/: CapWords-CamelCase-en.md  CapWords-CamelCase.md  English-PEP8-summary.md  English-VS-Code-Guide.md  utilisatation-vs-code.md
eyes/: README.md  pyproject.toml
eyes/docs/: tests.md
eyes/docs/en/: lint.md  python-3-poetry.md  tests.md
eyes/docs/fr/: python-3-poetry.md
eyes/src/eyes/: application.py
eyes/src/eyes/scripts/: run_check.py  run_lint.py  run_tests.py
eyes/tests/: test_application.py
models/: pyproject.toml
models/src/models/: relational.py
models/src/models/orm/: __init__.py  sqlalchemy.py
models/src/models/relational/: config.py  db_schema.py  metadata.py
models/src/models/relational/orm/: __init__.py  sqlalchemy.py
models/tests/: test_relational.py
models/tests/relational/: test_config.py  test_database.ipynb  test_sqlalchemy.ipynb
models/tests/relational/data/: schema_postgresql.json  schema_sqlite.json  test.db
