[tool.poetry]
name = "models"
version = "0.1.0"
description = "Gestionnaire de modèles du projet Eyes"
authors = ["Hugues DTANKOUO <huguesdtankouo@gmail.com>"]
readme = "README.md"
packages = [
    { include = "models", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"
mypy = "^1.9.0"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    ".venv",
    "build",
]

[tool.ruff.format]
quote-style = "double"